|
Quick Lists
|
|
Bug ID:
|
6710665
|
|
Votes
|
0
|
|
Synopsis
|
G1: guarantee(_cm->out_of_regions() && _cm->region_stack_empty() && _task_queue->size() == 0, ...)
|
|
Category
|
hotspot:garbage_collector
|
|
Reported Against
|
|
|
Release Fixed
|
hs14(b06)
|
|
State
|
10-Fix Delivered,
bug
|
|
Priority:
|
4-Low
|
|
Related Bugs
|
|
|
Submit Date
|
04-JUN-2008
|
|
Description
|
G1 failed the guarantee while running GCBasher on T2000.
At concurrentMark.cpp:3783
Error: guarantee(_cm->out_of_regions() && _cm->region_stack_empty() && _task_queue->size() == 0,"only way to reach here")
Posted Date : 2008-06-04 17:39:43.0
|
|
Work Around
|
N/A
|
|
Evaluation
|
_cm->region_stack_empty() can become not empty again because if some thread in aborting in CMTask::drain_region_stack() it will push a partially done region back.
Posted Date : 2008-06-05 17:58:57.0
http://hg.openjdk.java.net/jdk7/hotspot-gc/hotspot/rev/afc1ce1efe66
Posted Date : 2008-08-28 05:35:15.0
|
|
Comments
|
PLEASE NOTE: JDK6 is formerly known as Project Mustang
|
|
|
 |