6710665: G1: guarantee(_cm->out_of_regions() && _cm->region_stack_empty() && _task_queue->size() == 0, ...)

Remove the incorrect assumptions from guarantee()s.

Reviewed-by: ysr, tonyp